--- a/09 aula/cadastro-usuario.html
+++ b/09 aula/cadastro-usuario.html
@@ -92,16 +92,17 @@
                     <div class="novos-usuarios">
                         <div class="user">
                             <div class="num">  10</div>
-                            <div> novos usuarios</div>
+                            <div class="num1"> novos usuarios</div>
                         </div>
                         <div class="admin">
                             <div class="num">  5</div>
-                            <div> Administradores</div>
+                            <div class="num1"> Administradores</div>
                         </div>
                     </div>
                     <hr>
                     <div class="formulario">
-                        <h3>Novo usuários</h3>
+                        <h3>Novo usuário</h3>
+                        
                         <form action="" id="form">
                             <label for="nome">Nome </label>
                             <input type="text" id="nome">
